alignment issue

--- a/public/output.css
+++ b/public/output.css
@@ -564,10 +564,6 @@ video {
   z-index: 40;
 }
 
-.m-3{
-  margin: 0.75rem;
-}
-
 .m-1{
   margin: 0.25rem;
 }
@@ -577,83 +573,33 @@ video {
   margin-right: auto;
 }
 
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-8{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
 .my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.ml-\[33\%\]{
-  margin-left: 33%;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
-.mt-16{
-  margin-top: 4rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .mb-2{
   margin-bottom: 0.5rem;
 }
 
+.ml-\[33\%\]{
+  margin-left: 33%;
+}
+
+.mt-16{
+  margin-top: 4rem;
+}
+
 .mt-20{
   margin-top: 5rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -668,6 +614,10 @@ video {
   height: 16rem;
 }
 
+.h-\[300px\]{
+  height: 300px;
+}
+
 .h-full{
   height: 100%;
 }
@@ -676,8 +626,16 @@ video {
   height: ;
 }
 
-.h-\[300px\]{
-  height: 300px;
+.h-\[300p\]{
+  height: 300p;
+}
+
+.h-80{
+  height: 20rem;
+}
+
+.h-72{
+  height: 18rem;
 }
 
 .w-5\/6{
@@ -744,10 +702,6 @@ video {
   gap: 4rem;
 }
 
-.overflow-auto{
-  overflow: auto;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -756,34 +710,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-
-.rounded-l{
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.border{
-  border-width: 1px;
-}
-
 .border-2{
   border-width: 2px;
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-blue{
@@ -796,35 +728,14 @@ video {
   background-color: rgb(5 8 22 / var(--tw-bg-opacity));
 }
 
-.bg-yellow{
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 204 73 / var(--tw-bg-opacity));
-}
-
 .bg-dark-purple{
   --tw-bg-opacity: 1;
   background-color: rgb(22 7 41 / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-yellow{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-white\/50{
-  background-color: rgb(255 255 255 / 0.5);
-}
-
-.bg-white\/75{
-  background-color: rgb(255 255 255 / 0.75);
-}
-
-.bg-grey\/80{
-  background-color: rgb(237 237 237 / 0.8);
-}
-
-.bg-grey\/90{
-  background-color: rgb(237 237 237 / 0.9);
+  background-color: rgb(253 204 73 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-custom-1{
@@ -835,8 +746,20 @@ video {
   background-image: linear-gradient(110deg,  #160729 10%, #050816 60%);
 }
 
+.bg-gradient-custom-3{
+  background-image: linear-gradient(70deg,  #160729 10%, #050816 60%);
+}
+
 .bg-gradient-rainblue-2{
   background-image: linear-gradient(45deg, #24CBFF 14.53%, #FC59FF 69.36%, #FFBD0C 117.73%);
+}
+
+.p-0{
+  padding: 0px;
+}
+
+.p-0\.5{
+  padding: 0.125rem;
 }
 
 .p-1{
@@ -851,21 +774,19 @@ video {
   padding: 0.5rem;
 }
 
-.p-0{
-  padding: 0px;
-}
-
-.p-0\.5{
-  padding: 0.125rem;
-}
-
-.p-3{
-  padding: 0.75rem;
-}
-
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-10{
@@ -876,21 +797,6 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .text-center{
@@ -932,11 +838,6 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .font-semibold{
@@ -1010,10 +911,6 @@ body,
     margin-top: 4rem;
   }
 
-  .md\:mt-32{
-    margin-top: 8rem;
-  }
-
   .md\:mt-\[100px\]{
     margin-top: 100px;
   }
@@ -1053,11 +950,6 @@ body,
 
   .md\:text-start{
     text-align: start;
-  }
-
-  .md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .md\:text-6xl{
